@@ -25,7 +25,9 @@ COM_USERS_FIELD_PASSWORD_RESET_LABEL="E-mail Address:"
 COM_USERS_FIELD_REMIND_EMAIL_DESC="Please enter the e-mail address associated with your User account.<br /> Your username will be e-mailed to the e-mail address on file."
 COM_USERS_FIELD_REMIND_EMAIL_LABEL="E-mail Address:"
 COM_USERS_FIELD_RESET_CONFIRM_TOKEN_DESC="Enter the password reset verification code you received by email."
-COM_USERS_FIELD_RESET_CONFIRM_TOKEN_LABEL="verification code:"
+COM_USERS_FIELD_RESET_CONFIRM_TOKEN_LABEL="Verification Code:"
+COM_USERS_FIELD_RESET_CONFIRM_USERNAME_DESC="Enter your username"
+COM_USERS_FIELD_RESET_CONFIRM_USERNAME_LABEL="Username:"
 COM_USERS_FIELD_RESET_PASSWORD1_DESC="Enter your new password"
 COM_USERS_FIELD_RESET_PASSWORD1_LABEL="Password:"
 COM_USERS_FIELD_RESET_PASSWORD1_MESSAGE="The passwords you entered do not match. Please enter your desired password in the password field and confirm your entry by entering it in the confirm password field."
